--- a/templates/books.html
+++ b/templates/books.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <h1>Book List</h1>
+    <h1>My Great Library</h1>
     <table>
       <thead>
         <tr>
